<resources>
    <string name="app_name">SpaceX</string>
    <string name="company_description" formatted="false">%s was founded by %s in %s. It has now %s employees, %s launch sites and its valued at USD %s</string>

    <string name="company">Company</string>
    <string name="launches">Launches</string>

    <string name="mission_item_name">Mission: %s</string>
    <string name="mission_item_date">Date/time: %s at %s</string>
    <string name="mission_item_rocket">Rocket: %s / %s</string>

    <string name="mission_item_days_since">Days since now:  %s</string>
    <string name="mission_item_days_from">Days from now:  %s</string>
    <string name="wiki">wikipedia</string>
    <string name="article">Article</string>
    <string name="video">Video</string>

    <string name="link_not_found">Link not found or inexistent</string>
    <string name="fetch_exception">An error occurred while obtaining data</string>
    <string name="offline_exception">Offline network. Try again later</string>
    <string name="no_host">Could not resolve host</string>
    <string name="retry">Retry</string>
    <string name="filter">Filter</string>
    <string name="sort_type">Sort items</string>
    <string name="ascending">Ascending</string>
    <string name="descending">descending</string>
    <string name="filter_only_success">Filter only successfull launches</string>
    <string name="year_range">Launch year range</string>

</resources>
