<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.jhernandes.spacex.main.usecase.GetLaunchesUseCase.SortOrder" />

        <variable
            name="viewModel"
            type="com.jhernandes.spacex.main.ui.MainViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.updateSortOrder(SortOrder.ASC)}"
                android:text="@string/ascending" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.updateSortOrder(SortOrder.DESC)}"
                android:text="@string/descending" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{viewModel.filterSuccesses}"
            android:onCheckedChanged="@{(btn, checked) -> viewModel.handleSuccessFilterChanged(checked)}"
            android:text="@string/filter_only_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_range" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rs_year_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="2000"
            android:valueTo="2030" />

    </LinearLayout>
</layout>
