<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <variable
            name="launch"
            type="com.jhernandes.spacex.model.MissionLaunchModel" />

        <variable
            name="viewModel"
            type="com.jhernandes.spacex.main.ui.MainViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleLinkPressed(launch.missionLinks.wikipediaUrl)}"
            android:text="@string/wiki" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleLinkPressed(launch.missionLinks.articleUrl)}"
            android:text="@string/article" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleLinkPressed(launch.missionLinks.youtubeUrl)}"
            android:text="@string/video" />

    </LinearLayout>
</layout>
