<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jhernandes.spacex.main.ui.MainViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".main.ui.MainFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Theme.SpaceX.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/main_menu"
            app:title="@string/app_name" />

        <TextView
            style="@style/Theme.SpaceX.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company" />

        <TextView
            android:id="@+id/tv_company_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:text="@string/company_description" />

        <TextView
            style="@style/Theme.SpaceX.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launches" />

        <ProgressBar
            goneUnless="@{viewModel.showLoading}"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            goneUnless="@{!viewModel.showLoading}"
            android:id="@+id/rv_launches"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_launch" />
    </LinearLayout>
</layout>
